user/static/css/user_profile.css
table {
    border: 1px solid darkgrey;
    border-collapse: collapse;
}

table th {
    padding: 5px;
}

table td {
    padding: 5px;
    text-align: center;
}

.profile {
    display: grid;

    grid-template-columns: 4% 10% auto 15% 4%;
}

.profile_items {
    display: grid;
    grid-column: 3;

    padding: 25px;
    margin-top: 100px;

    grid-template-columns: 35% 35% 25%;

    border: solid 0.5px lightgrey;

    grid-row-gap: 25px;
    grid-column-gap: 10px;
}

.text_readings {
    display: grid;

    margin-top: 15px;

    grid-column: 1 / 4;
    grid-row: 2;

    grid-template-rows: 25px auto;
}

.performance {
    display: grid;

    grid-column: 1 / 4;
    grid-row: 4;

    margin-top: 10px;

    grid-template-rows: 25px auto;
}

.preferred_difficulty {
    display: grid;
    grid-column: 1 / 4;
    grid-row: 2;

    margin-top: 10px;

    grid-template-rows: 25px auto;
}

.difficulty_desc {
    margin-top: 10px;
}

.feedback {
    display: grid;
    grid-row: 5;

    font-size: larger;

    grid-template-columns: auto;
    grid-template-rows: 25px 35px;
}

.flashcards {
}

.performance_report {
    margin-top: 10px;
}

.performance_download_link {
    margin-top: 10px;
}

.text_readings_values {
    display: grid;

    margin-top: 10px;
    grid-template-columns: repeat(5, auto);

    grid-row-gap: 15px;
    row-gap: 15px;
}

.text_reading_actions {
    grid-template-columns: auto;
    margin-top: 10px;
}

.text_reading_item {
    margin-bottom: 5px;
}

.profile_item {
    display: grid;

    grid-template-columns: auto;
    grid-template-rows: 25px 35px;
    margin-bottom: 15px;
}

.profile_item_title {
    border-bottom: solid 0.5px grey;
    padding-bottom: 10px;
}

.profile_item_value {
    margin-top: 15px;
}

.update_username {
    margin-top: 10px;
    font-size: smaller;
}

.valid_username:after {
    content: '✓';
    color: #26b72b;
    padding-left: 5px;
}

.invalid_username:after {
    content: '✖';
    color: #f00;
    padding-left: 5px;
}

.difficulty {
    margin-bottom: 15px;
}

.difficulty > .title {
    font-size: larger;
}

.category {
    margin-top: 5px;
}

.category > .title {
    font-style: italic;
}

.metric {
    margin-top: 5px;
}

.metric > .title {
    font-size: smaller;
}

.username_msg {
    margin-top: 5px;
}

.username_submit {
    margin-top: 5px;
}

.username_submit > span {
    margin-left: 5px;
    text-decoration: underline;
}

#username_hint {
    bottom: 200px;
}

#my_performance_hint {
    bottom: 220px;
}

#preferred_difficulty_hint {
    bottom: 280px;
}

#username_menu_item_hint {
    left: 200px;
    top: 130px;
}

#search_text_menu_item_hint {
    top: 50px;
}

.input_error {
    border: 1px solid #ff0000;
    background-color: #ffeeee;
}

@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
    .header {
        display: flex;
        font-size: 12px;
    }

    .profile {
        display: flex;
        font-size: 11px;
    }

    .profile_items {
        grid-template-columns: 50% 50%;
    }

    .menu {
        display: flex;
        flex-wrap: wrap;
    }

    .menu > .menu_item {
        padding-left: 5px;
        padding-right: 5px;
    }

    .filter {
        display: none;
    }

}

